--- a/config.ini
+++ b/config.ini
@@ -8,16 +8,16 @@ username = ''
 # 那么京东可能会在下单时自动选择京券支付 或 自动勾选京豆支付。
 # 此时下单会要求输入六位数字的支付密码。请在下方配置你的支付密码，如 123456 。
 # 如果没有上述情况，下方请留空。
-payment_pwd = 
+payment_pwd = 521521
 
 [config]
 # 查询库存请求超时(秒)，可选配置，默认10秒
-timeout =
+timeout =3
 
 # 是否使用随机 useragent，默认为 false
 random_useragent = false
 
 [messenger]
 # 使用了Server酱的推送服务
-enable = false
+enable = ture
 sckey = SCT65913TQrC0uBiKYLAlGfKvG2NmsvFH
